--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,31 +6,41 @@ services:
     image: ont-amplicon-phase:latest
     container_name: ont-amplicon-pipeline
     volumes:
-      - ./data:/data
-      - ./results:/results
-      - ./config:/config
+      # Map host data to original paths inside container
+      - ${DATA_DIR:-./data}:/EBSDataDrive/ONT/Runs
+      - ${RESULTS_DIR:-./results}:/EBSDataDrive/ONT/Runs/results
+      - ${SOFTWARE_DIR:-./software}:/EBSDataDrive/software
     environment:
-      - ONT_REFERENCE_GENOME=/data/reference/genome.fna
+      # Use original default paths (tools are installed in container)
+      - ONT_REFERENCE_GENOME=/opt/reference/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna
       - ONT_CLAIR3_PATH=/opt/Clair3
-      - ONT_HAPCUT2_PATH=/opt/HapCUT2/build
+      - ONT_HAPCUT2_PATH=/opt/HapCUT2-1.3.4/build
+      - ONT_BASE_DATA_DIR=/EBSDataDrive/ONT/Runs
+      - ONT_SOFTWARE_DIR=/EBSDataDrive/software
+      - ONT_S3_BUCKET=${ONT_S3_BUCKET:-nswhp-gaia-poc-pl}
+      - ONT_S3_PREFIX=${ONT_S3_PREFIX:-ONT}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - ONT_LOG_LEVEL=INFO
     working_dir: /app
     command: ["ont-amplicon-phase", "--help"]
 
-  # Development service with mounted source code
+  # Development service
   ont-amplicon-dev:
     build: .
     image: ont-amplicon-phase:latest
     container_name: ont-amplicon-dev
     volumes:
       - ./src:/app/src
-      - ./data:/data
-      - ./results:/results
-      - ./config:/config
+      - ${DATA_DIR:-./data}:/EBSDataDrive/ONT/Runs
+      - ${RESULTS_DIR:-./results}:/EBSDataDrive/ONT/Runs/results
+      - ${SOFTWARE_DIR:-./software}:/EBSDataDrive/software
     environment:
-      - ONT_REFERENCE_GENOME=/data/reference/genome.fna
+      - ONT_REFERENCE_GENOME=/opt/reference/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna
       - ONT_CLAIR3_PATH=/opt/Clair3
-      - ONT_HAPCUT2_PATH=/opt/HapCUT2/build
+      - ONT_HAPCUT2_PATH=/opt/HapCUT2-1.3.4/build
+      - ONT_BASE_DATA_DIR=/EBSDataDrive/ONT/Runs
+      - ONT_SOFTWARE_DIR=/EBSDataDrive/software
       - ONT_LOG_LEVEL=DEBUG
     working_dir: /app
     command: ["bash"]
