--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,11 @@ services:
     image: ont-amplicon-phase:latest
     container_name: ont-amplicon-pipeline
     volumes:
-      # Map host data to original paths inside container
-      - ${DATA_DIR:-./data}:/EBSDataDrive/ONT/Runs
+      # Map host data to container
+      - ${DATA_DIR:-/EBSDataDrive}:/EBSDataDrive
       - ${RESULTS_DIR:-./results}:/EBSDataDrive/ONT/Runs/results
-      - ${SOFTWARE_DIR:-./software}:/EBSDataDrive/software
     environment:
-      # Use original default paths (tools are installed in container)
-      - ONT_REFERENCE_GENOME=/opt/reference/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna
-      - ONT_CLAIR3_PATH=/opt/bin
-      - ONT_HAPCUT2_PATH=/opt/HapCUT2-1.3.4/build
+      # Override defaults if needed
       - ONT_BASE_DATA_DIR=/EBSDataDrive/ONT/Runs
       - ONT_SOFTWARE_DIR=/EBSDataDrive/software
       - ONT_S3_BUCKET=${ONT_S3_BUCKET:-nswhp-gaia-poc-pl}
@@ -32,13 +28,9 @@ services:
     container_name: ont-amplicon-dev
     volumes:
       - ./src:/app/src
-      - ${DATA_DIR:-./data}:/EBSDataDrive/ONT/Runs
+      - ${DATA_DIR:-/EBSDataDrive}:/EBSDataDrive
       - ${RESULTS_DIR:-./results}:/EBSDataDrive/ONT/Runs/results
-      - ${SOFTWARE_DIR:-./software}:/EBSDataDrive/software
     environment:
-      - ONT_REFERENCE_GENOME=/opt/reference/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna
-      - ONT_CLAIR3_PATH=/opt/bin
-      - ONT_HAPCUT2_PATH=/opt/HapCUT2-1.3.4/build
       - ONT_BASE_DATA_DIR=/EBSDataDrive/ONT/Runs
       - ONT_SOFTWARE_DIR=/EBSDataDrive/software
       - ONT_LOG_LEVEL=DEBUG
