--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       # Map host data to container
       - ${DATA_DIR:-/EBSDataDrive}:/EBSDataDrive
       - ${RESULTS_DIR:-./results}:/EBSDataDrive/ONT/Runs/results
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       # Override defaults if needed
       - ONT_BASE_DATA_DIR=/EBSDataDrive/ONT/Runs
@@ -30,6 +31,7 @@ services:
       - ./src:/app/src
       - ${DATA_DIR:-/EBSDataDrive}:/EBSDataDrive
       - ${RESULTS_DIR:-./results}:/EBSDataDrive/ONT/Runs/results
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - ONT_BASE_DATA_DIR=/EBSDataDrive/ONT/Runs
       - ONT_SOFTWARE_DIR=/EBSDataDrive/software
