--- a/GUI/.env.example
+++ b/GUI/.env.example
@@ -6,3 +6,9 @@ BASE_PATH=/EBSDataDrive/ONT/Runs
 # Local Configuration
 LOCAL_PATH=/app/data
 PEM_PATH=/app/config/ssh_key.pem
+
+# Network Configuration
+# Set to 0.0.0.0 to allow access from other computers on the network
+# Set to 127.0.0.1 (default) to restrict access to localhost only
+FLASK_HOST=0.0.0.0
+FLASK_PORT=5001
