--- a/GUI/docker-compose.yml
+++ b/GUI/docker-compose.yml
@@ -3,11 +3,14 @@ version: '3.8'
 services:
   gui-ampmap:
     image: javadj/gui_ampmap:latest
-    network_mode: "host"
+    ports:
+      - "5001:5001"
     volumes:
       - ./data:/app/data
       - ./logs:/app/logs
       - ./config:/app/config
+    env_file:
+      - .env
     environment:
       - FLASK_ENV=production
       - FLASK_HOST=0.0.0.0
